added links to homepage

--- a/mysite/polls/templates/polls/results.html
+++ b/mysite/polls/templates/polls/results.html
@@ -19,6 +19,8 @@
     </ul>
 
     <a href="{% url 'polls:detail' question.id %}">Vote again?</a>
+    <br> 
+    <a href="{% url 'polls:index' %}">Back to All Polls</a>
 
 </body>
 </html>
