--- a/mysite/polls/templates/polls/detail.html
+++ b/mysite/polls/templates/polls/detail.html
@@ -30,7 +30,7 @@
     </fieldset>
     <input type="submit" value="Vote">
     </form>
-
-
+    <br>
+    <a href="{% url 'polls:index' %}">Back to All Polls</a>
 </body>
 </html>
