--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% load static %}
+
+    <link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
     <title>Document</title>
 </head>
 <body>
@@ -19,5 +22,6 @@
     {% else %}
         <p>No polls are available.</p>
     {% endif %}
+    <h3><a href="{% url 'polls:new' %}">New Poll</a></h5>
 </body>
 </html>
